Trying to fix issues with being 1 char behind

--- a/client/components/AccountCreation/AccountCreation.css
+++ b/client/components/AccountCreation/AccountCreation.css
@@ -1,10 +1,9 @@
 .create-account-button {
     width: fit-content;
 }
-
-.AccountCreation__password-req-false {
+.AccountCreation__req-false {
     color: red;
 }
-.AccountCreation__password-req-true {
+.AccountCreation__req-true {
     color: green;
 }
